src/test/deca/context/invalid/SansObjet/DeclVar-BadFloat.deca
// Description:
//    Variable declaration using a non predefined type token
//
// Results:
//    Error: (RULE 0.2) Type does not exist
//
// Historique:
//    cree le 11/01/2022

{
        Float x;
}
